Fix line height and word spacing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -48,7 +48,6 @@ html {
   color: var(--font-color);
   font-family: "Reem Kufi", sans-serif;
   letter-spacing: 0.1em;
-  word-spacing: 0.5em;
 }
 
 body {
